k8s/overlays/live/imagepull.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-explorer
spec:
  template:
    spec:
      containers:
        - name: data-explorer
          imagePullPolicy: Always
