k8s/overlays/live/storageclass-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  volumeClaimTemplates:
  - metadata:
      name: postgres-storage
    spec:
      storageClassName: "ebs-sc"
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
